[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/snippets_plugin/snippet_editor.gd" type="Script" id=1]
[ext_resource path="res://addons/snippets_plugin/icon_save.svg" type="Texture" id=2]
[ext_resource path="res://addons/snippets_plugin/icon_numbers.svg" type="Texture" id=3]
[ext_resource path="res://addons/snippets_plugin/icon_highlight.svg" type="Texture" id=4]
[ext_resource path="res://addons/snippets_plugin/icon_syntax.svg" type="Texture" id=5]

[node name="snippet_editor" type="WindowDialog"]
visible = true
margin_left = 317.0
margin_top = 85.0
margin_right = 862.0
margin_bottom = 523.0
window_title = "Snippet Editor"
resizable = true
script = ExtResource( 1 )

[node name="vbox" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="menu" type="HBoxContainer" parent="vbox"]
margin_right = 545.0
margin_bottom = 22.0

[node name="btnSave" type="Button" parent="vbox/menu"]
margin_right = 28.0
margin_bottom = 22.0
hint_tooltip = "Save Code"
disabled = true
icon = ExtResource( 2 )

[node name="btnNumbers" type="Button" parent="vbox/menu"]
margin_left = 32.0
margin_right = 60.0
margin_bottom = 22.0
hint_tooltip = "Line Numbers"
toggle_mode = true
icon = ExtResource( 3 )

[node name="btnHighlight" type="Button" parent="vbox/menu"]
margin_left = 64.0
margin_right = 92.0
margin_bottom = 22.0
hint_tooltip = "Line Highlight"
toggle_mode = true
icon = ExtResource( 4 )

[node name="btnSyntax" type="Button" parent="vbox/menu"]
margin_left = 96.0
margin_right = 124.0
margin_bottom = 22.0
hint_tooltip = "Syntax Highlight"
toggle_mode = true
icon = ExtResource( 5 )

[node name="code" type="TextEdit" parent="vbox"]
margin_top = 26.0
margin_right = 545.0
margin_bottom = 438.0
mouse_default_cursor_shape = 0
size_flags_vertical = 3

[node name="FileDialog" type="FileDialog" parent="."]
margin_right = 300.0
margin_bottom = 300.0
rect_min_size = Vector2( 300, 300 )
resizable = true

[connection signal="hide" from="." to="." method="_on_snippet_editor_hide"]
[connection signal="pressed" from="vbox/menu/btnSave" to="." method="_on_btnSave_pressed"]
[connection signal="toggled" from="vbox/menu/btnNumbers" to="." method="_on_btnNumbers_toggled"]
[connection signal="toggled" from="vbox/menu/btnHighlight" to="." method="_on_btnHighlight_toggled"]
[connection signal="toggled" from="vbox/menu/btnSyntax" to="." method="_on_btnSyntax_toggled"]
[connection signal="text_changed" from="vbox/code" to="." method="_on_code_text_changed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
